--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,10 @@ check-version:
     - shell
   script:
     - python --version
+    - curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o get-pip.py
+    - python get-pip.py
+    - pip install scanapi
+    - scanapi run /api/scanapi/scan_external.yml
 
 # build:
 #   stage: build
