check another runner on scan-external CI stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,9 +32,10 @@ test:
 scan-external:
   stage: scan-external
   tags:
-    - docker-luiz
-  before_script:
-    - pip3 install --no-cache-dir scanapi
+    - shell-luiz
+  #   - docker-luiz
+  # before_script:
+  #   - pip3 install --no-cache-dir scanapi
   script:
     - make scan-external
   artifacts:
